# treehacks26

./: .gitignore  LICENSE  README.md  audio_fetch.py  camera.py  colorchanging.ino  context_shot.py  docker-compose.elasticsearch.yml  embed.py  emotions.py  es_index.py  facial_emotions.py  fusion.py  lamp_light_control.py  main.py  mulan.py  mulan_embed.py  music.py  play_music.py  pyproject.toml  requirements.txt  retrieval_cases.json  run_mulan.py  spotify_ingest.py  suno.py  suno_gen_music.py  test_mulan_retrieval.py  voice.py
client/: package-lock.json  package.json  tsconfig.tsbuildinfo
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/app/callback/: page.tsx
client/src/app/dashboard/: page.tsx
client/src/app/playlists/: page.tsx
client/src/app/tracks/[playlistId]/: page.tsx
client/src/app/vibe/: page.tsx
colorchanging/: colorchanging.ino
lyrics/: dancing_with_your_ghost_sasha.txt  go_to_war_nothing.txt  happy_pharraell.txt  perfect_ed.txt  riptide_vance.txt  useless_sacrifice_death.txt
server/: .env.example  requirements-server.txt  test_lamp.py
server/app/: config.py  dashboard_runtime.py  main.py  semantic_service.py  session_store.py  spotify_api.py  spotify_oauth.py
server/app/routers/: auth.py  camera.py  dashboard_runtime.py  semantic.py  spotify.py
server/tests/: test_oauth_and_session.py  test_routes_mocked.py
tests/: live_vocal_test.py  test_es_index.py  test_fusion.py  test_mulan_retrieval.py  test_spotify_ingest.py  test_vocal_tracking.py
