[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "treehacks26"
version = "0.1.0"
description = "Modular camera streaming utility for CV prototyping"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26,<3.0",
  "opencv-python>=4.9,<5.0",
  "mediapipe>=0.10.14,<0.11",
  "torch>=2.2,<3.0",
  "transformers>=4.41,<5.0",
  "Pillow>=10.0,<12.0",
  "openai>=1.40,<2.0",
]

[tool.setuptools]
py-modules = ["camera", "emotions", "suno", "music", "main"]
